 Bug 514487 -  Cloning a document doesn't update the ID map, r=bz